syntax = "proto3";

package my.pb;

option go_package = "my/pb";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string reply = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}